Update for google_auth_proxy 1.0
- Use a config file
- Support multiple upstreams, multiple domains

--- a/templates/default/upstart.conf.erb
+++ b/templates/default/upstart.conf.erb
@@ -9,13 +9,5 @@ respawn
 
 console log
 
-env google_auth_client_id=<%= @client_id %>
-env google_auth_secret=<%= @client_secret %>
-
 setuid <%= @user %>
-exec /opt/go/bin/google_auth_proxy 	-cookie-domain="<%= @cookie_domain %>" \
-					-cookie-secret="<%= @cookie_secret %>" \
-					-google-apps-domain="<%= @google_apps_domain %>" \
-					-http-address="<%= @listen_address %>" \
-					-redirect-url="<%= @redirect_url%>" \
-					-upstream="<%= @upstreams %>"     
+exec /opt/go/bin/google_auth_proxy -config=/etc/google_auth_proxy/<%= @service_name %>.conf
