--- a/templates/default/upstart.conf.erb
+++ b/templates/default/upstart.conf.erb
@@ -1,6 +1,4 @@
-
 description     "Google Auth Proxy instance"
-author          "Kevin Lamontagne <kevin@demarque.com>"
 
 start on runlevel [2345]
 stop on shutdown
@@ -10,4 +8,4 @@ respawn
 console log
 
 setuid <%= @user %>
-exec /opt/go/bin/google_auth_proxy -config=/etc/google_auth_proxy/<%= @service_name %>.conf
+exec <%= @bin_path %>/google_auth_proxy -config=/etc/google_auth_proxy/<%= @service_name %>.conf
