--- a/templates/default/proxy.conf.erb
+++ b/templates/default/proxy.conf.erb
@@ -6,7 +6,7 @@ upstreams = [
   "<%= u %>"
 <% end %>
 ]
-pass_basic_auth = true
+pass_basic_auth = <%= @pass_basic_auth %> 
 
 google_apps_domains = [
 <% @google_apps_domains.each do |d| %>
@@ -17,10 +17,11 @@ google_apps_domains = [
 client_id = "<%= @client_id %>"
 client_secret = "<%= @client_secret %>"
 
-# authenticated_emails_file = ""
-# htpasswd_file = ""
+authenticated_emails_file = "<%= @authenticated_emails_file %>"
+htpasswd_file = "<%= @htpasswd_file %>"
 
 cookie_secret = "<%= @cookie_secret %>"
 cookie_domain = "<%= @cookie_domain %>"
-cookie_expire = "168h"
-cookie_https_only = true
+cookie_expire = "<%= @cookie_expire %>"
+cookie_https_only = <%= @cookie_https_only %>
+cookie_httponly = <%= @cookie_httponly %>
