Adding pass user variable as well

--- a/templates/default/proxy.conf.erb
+++ b/templates/default/proxy.conf.erb
@@ -4,8 +4,9 @@ redirect_url = "<%= @redirect_url %>"
 upstreams = [
   <%= @upstreams.map{|upstream| "\"#{upstream}\""}.join(",\n  ") %>
 ]
-pass_basic_auth = <%= @pass_basic_auth %> 
 basic_auth_password = <%= @basic_auth_password %>
+pass_basic_auth = <%= @pass_basic_auth %> 
+pass_user_headers = <%= @pass_user_headers %> 
 
 google_apps_domains = [
 <% @google_apps_domains.each do |d| %>
