Fixing and bumping version

--- a/templates/default/proxy.conf.erb
+++ b/templates/default/proxy.conf.erb
@@ -4,9 +4,14 @@ redirect_url = "<%= @redirect_url %>"
 upstreams = [
   <%= @upstreams.map{|upstream| "\"#{upstream}\""}.join(",\n  ") %>
 ]
-basic_auth_password = <%= @basic_auth_password %>
+
 pass_basic_auth = <%= @pass_basic_auth %> 
 pass_user_headers = <%= @pass_user_headers %> 
+
+<% unless basic_auth_password.empty? -%>
+basic_auth_password = <%= @basic_auth_password %>
+<% end -%>
+
 
 google_apps_domains = [
 <% @google_apps_domains.each do |d| %>
