fixing missing @ and bumping version

--- a/templates/default/proxy.conf.erb
+++ b/templates/default/proxy.conf.erb
@@ -8,7 +8,7 @@ upstreams = [
 pass_basic_auth = <%= @pass_basic_auth %> 
 pass_user_headers = <%= @pass_user_headers %> 
 
-<% unless basic_auth_password.empty? -%>
+<% unless @basic_auth_password.empty? -%>
 basic_auth_password = <%= @basic_auth_password %>
 <% end -%>
 
